--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'mysql:mysql-connector-java:8.0.19'
+    compile 'com.google.guava:guava:28.2-jre'
     testImplementation('org.junit.jupiter:junit-jupiter:5.6.0')
 }
 
