--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
-url=jdbc:mysql://127.0.0.1:3306/carpark_info?useUnicode=true&characterEncoding=utf-8
+url=jdbc:mysql://127.0.0.1:3306/luo?useUnicode=true&characterEncoding=utf-8
 user=root
-password=
+password=123456
 driver=com.mysql.cj.jdbc.Driver
